--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Demo 1
+name: Demo 1 - Basic Workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
