--- a/.github/workflows/demo-multiple-jobs-with-environments.yml
+++ b/.github/workflows/demo-multiple-jobs-with-environments.yml
@@ -1,13 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-#
-#
-#
-#
-#
-# This is a basic workflow to help you get started with Actions
-#
-#
-#
 #
 #
 #
@@ -33,11 +23,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
+  
   job1:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: DEMO5_DEV
+    environment: DEMO_DEV
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -48,7 +38,7 @@ jobs:
   job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: DEMO5_QA
+    environment: DEMO_QA
     needs:
       - job1
 
@@ -73,7 +63,7 @@ jobs:
   job4:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: DEMO5_PROD
+    environment: DEMO_PROD
     needs:
       - job2
 
