--- a/.github/workflows/demo7-pr.yml
+++ b/.github/workflows/demo7-pr.yml
@@ -20,25 +20,25 @@ jobs:
         dotnet-version: 3.1.301
     
     - name: Install dependencies
-      run: dotnet restore "${{ github.workspace }}/ndclondon/ndclondon.csproj"
+      run: dotnet restore "${{ github.workspace }}/mywebapp/mywebapp.csproj"
     
     - name: Build
-      run: dotnet build "${{ github.workspace }}/ndclondon/ndclondon.csproj" --configuration Release --no-restore
+      run: dotnet build "${{ github.workspace }}/mywebapp/mywebapp.csproj" --configuration Release --no-restore
     
     - name: Test
-      run: dotnet test "${{ github.workspace }}/ndclondon/ndclondon.csproj" --no-restore --verbosity normal
+      run: dotnet test "${{ github.workspace }}/mywebapp/mywebapp.csproj" --no-restore --verbosity normal
       
     - name: Publish
       run: |
-        dotnet publish "${{ github.workspace }}/ndclondon/ndclondon.csproj" -c Release -o ndclondonapp
+        dotnet publish "${{ github.workspace }}/mywebapp/mywebapp.csproj" -c Release -o mywebapp
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.0
       with:
         # Artifact name
-        name: ndclondonbuildartifacts
+        name: mywebappbuildartifacts
         # A file, directory or wildcard pattern that describes what to upload
-        path: ndclondonapp/**
+        path: mywebapp/**
         # The desired behavior if no files are found using the provided path.
         if-no-files-found: error
         # Duration after which artifact will expire in days. 0 means using default retention.
