--- a/.github/workflows/demo7-push-to-main.yml
+++ b/.github/workflows/demo7-push-to-main.yml
@@ -21,25 +21,25 @@ jobs:
         dotnet-version: 3.1.301
     
     - name: Install dependencies
-      run: dotnet restore "${{ github.workspace }}/ndclondon/ndclondon.csproj"
+      run: dotnet restore "${{ github.workspace }}/mywebapp/mywebapp.csproj"
     
     - name: Build
-      run: dotnet build "${{ github.workspace }}/ndclondon/ndclondon.csproj" --configuration Release --no-restore
+      run: dotnet build "${{ github.workspace }}/mywebapp/mywebapp.csproj" --configuration Release --no-restore
     
     - name: Test
-      run: dotnet test "${{ github.workspace }}/ndclondon/ndclondon.csproj" --no-restore --verbosity normal
+      run: dotnet test "${{ github.workspace }}/mywebapp/mywebapp.csproj" --no-restore --verbosity normal
       
     - name: Publish
       run: |
-        dotnet publish "${{ github.workspace }}/ndclondon/ndclondon.csproj" -c Release -o ndclondonapp
+        dotnet publish "${{ github.workspace }}/mywebapp/mywebapp.csproj" -c Release -o mywebapp
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.0
       with:
         # Artifact name
-        name: ndclondonbuildartifacts
+        name: mywebappbuildartifacts
         # A file, directory or wildcard pattern that describes what to upload
-        path: ndclondonapp/**
+        path: mywebapp/**
         # The desired behavior if no files are found using the provided path.
         if-no-files-found: error
         # Duration after which artifact will expire in days. 0 means using default retention.
@@ -56,7 +56,7 @@ jobs:
     
     environment:
       name: 'DEMO7_DEV'
-      url: 'https://ndclondontest1-dev.azurewebsites.net/'
+      url: 'https://mywebapp-actions-dev.azurewebsites.net'
 
     steps:
     - uses: actions/checkout@v2
@@ -75,16 +75,16 @@ jobs:
       uses: actions/download-artifact@v2.0.8
       with:
         # Artifact name
-        name: 'ndclondonbuildartifacts'
+        name: 'mywebappbuildartifacts'
         # Destination path
-        path: 'ndclondonbuildartifacts'
+        path: 'mywebappbuildartifacts'
    
     # Deploy to Azure Web apps
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
-        app-name: ndclondontest1 # Replace with your app name
-        package: 'ndclondonbuildartifacts'
+        app-name: mywebapp-actions # Replace with your app name
+        package: 'mywebappbuildartifacts'
         slot-name: 'dev'   
         
   deploy-QA:
@@ -97,7 +97,7 @@ jobs:
     
     environment:
       name: 'DEMO7_QA'
-      url: 'https://ndclondontest1-qa.azurewebsites.net/'
+      url: 'https://mywebapp-actions-qa.azurewebsites.net'
 
     steps:
     - uses: actions/checkout@v2
@@ -116,16 +116,16 @@ jobs:
       uses: actions/download-artifact@v2.0.8
       with:
         # Artifact name
-        name: 'ndclondonbuildartifacts'
+        name: 'mywebappbuildartifacts'
         # Destination path
-        path: 'ndclondonbuildartifacts'
+        path: 'mywebappbuildartifacts'
    
     # Deploy to Azure Web apps
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
-        app-name: ndclondontest1 # Replace with your app name
-        package: 'ndclondonbuildartifacts'
+        app-name: mywebapp-actions # Replace with your app name
+        package: 'mywebappbuildartifacts'
         slot-name: 'qa'   
         
   deploy-PROD:
@@ -139,7 +139,7 @@ jobs:
     
     environment:
       name: 'DEMO7_PROD'
-      url: 'https://ndclondontest1.azurewebsites.net/'
+      url: 'https://mywebapp-actions.azurewebsites.net'
 
     steps:
     - uses: actions/checkout@v2
@@ -158,13 +158,13 @@ jobs:
       uses: actions/download-artifact@v2.0.8
       with:
         # Artifact name
-        name: 'ndclondonbuildartifacts'
+        name: 'mywebappbuildartifacts'
         # Destination path
-        path: 'ndclondonbuildartifacts'
+        path: 'mywebappbuildartifacts'
    
     # Deploy to Azure Web apps
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v2
       with: 
-        app-name: ndclondontest1 # Replace with your app name
-        package: 'ndclondonbuildartifacts'
+        app-name: mywebapp-actions # Replace with your app name
+        package: 'mywebappbuildartifacts'
