--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -28,7 +28,7 @@ jobs:
           - ubuntu-latest
           - macos-latest
           - windows-latest
-#        python: [2.7, 3.6, 3.8]
+        python: [2.7, 3.6, 3.8]
     runs-on: ${{ matrix.os }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -37,4 +37,4 @@ jobs:
     - name: Send greeting
       run: |
         echo "Hello ${{ github.event.inputs.name }}"
-#        echo "Python ver ${{ matrix.python }}"  
+        echo "Python ver ${{ matrix.python }}"  
