--- a/.github/workflows/demo5.yml
+++ b/.github/workflows/demo5.yml
@@ -30,6 +30,11 @@ jobs:
     - name: Send greeting
       run: echo "Job 1 - Hello ${{ github.event.inputs.name }}"
       
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+      
   job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
