--- a/.github/workflows/demo5.yml
+++ b/.github/workflows/demo5.yml
@@ -35,6 +35,11 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
       
+    - name: Dump job context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(job) }}
+      run: echo "$GITHUB_CONTEXT"
+      
   job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
