--- a/.github/workflows/demo5.yml
+++ b/.github/workflows/demo5.yml
@@ -40,6 +40,11 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(job) }}
       run: echo "$GITHUB_CONTEXT"
       
+    - name: Dump steps context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(steps) }}
+      run: echo "$GITHUB_CONTEXT"
+      
   job2:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
