--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -34,8 +34,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 # COMMENT OUT FOR BEGINNING OF DEMO
-#   needs:
-#     - job1
+    needs:
+      - job1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -47,8 +47,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 # COMMENT OUT FOR BEGINNING OF DEMO
-#   needs:
-#     - job1
+    needs:
+     - job1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -57,16 +57,16 @@ jobs:
       run: echo "Job 3 - Hello ${{ github.event.inputs.name }}"
 
 # COMMENT OUT FOR BEGINNING OF DEMO      
-# job4:
-#   # The type of runner that the job will run on
-#   runs-on: ubuntu-latest
+  job4:
+   # The type of runner that the job will run on
+   runs-on: ubuntu-latest
+
+   needs:
+     - job2
+     - job3
 #
-#   needs:
-#     - job2
-#     - job3
-#
-#   # Steps represent a sequence of tasks that will be executed as part of the job
-#   steps:
+   # Steps represent a sequence of tasks that will be executed as part of the job
+   steps:
 #   # Runs a single command using the runners shell
-#   - name: Send greeting
-#     run: echo "Job 4 - Hello ${{ github.event.inputs.name }}"
+   - name: Send greeting
+     run: echo "Job 4 - Hello ${{ github.event.inputs.name }}"
